Settings / Folders: Fix context menu z-index (#1990)

--- a/src/components/ui/Draggable.module.scss
+++ b/src/components/ui/Draggable.module.scss
@@ -1,6 +1,11 @@
 .container {
   position: absolute;
   width: 100%;
+  z-index: 1;
+
+  &:has(:global(.ListItem-context-menu)) {
+    z-index: 2;
+  }
 }
 
 .isDragging {
